# smtpsocket

./: readme.md
forwarder/: Cargo.toml  forwarder.py  requirements.txt  tes.py
forwarder/src/: main.rs
latex/latex/: LAPORAN.tex
server/: Cargo.toml  received_email.json
server/src/: main.rs  smtp.rs
socket/: Cargo.toml  client.py
socket/src/: main.rs
testt/: client.py  iki.txt  received_emails.json  smtp.py  web.py
testt/templates/: index.html
web/: index.html  package-lock.json  package.json  script.js  style.css
web/src/: index.html  output.css  script.js  styles.css
