[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
libsql-client = { version = "0.24.3", default-features = false, features = ["local_backend", "reqwest_backend"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"